Создана тестовая коллекция магазинов и тестовый API для её контроля

--- a/PriceTracker/Properties/launchSettings.json
+++ b/PriceTracker/Properties/launchSettings.json
@@ -23,6 +23,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7170;http://localhost:5094",
+      "launchUrl": "https://localhost:7170/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
