--- a/PriceTracker/appsettings.Development.json
+++ b/PriceTracker/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=PriceTracker; User ID=postgres; Password=123; Port=5432;"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
