--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=PriceTracker; User ID=postgres; Password=123; Port=5432;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
