--- a/PriceTrackerWebInterface/package.json
+++ b/PriceTrackerWebInterface/package.json
@@ -14,18 +14,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.0.5",
     "@angular/common": "^20.0.6",
     "@angular/compiler": "^20.0.6",
     "@angular/core": "^20.0.6",
     "@angular/forms": "^20.0.6",
+    "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.6",
     "@angular/platform-browser-dynamic": "^20.0.6",
     "@angular/router": "^20.0.6",
+    "@swimlane/ngx-charts": "^23.0.0-alpha.0",
+    "jest-editor-support": "*",
+    "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.1",
-    "jest-editor-support": "*",
-    "run-script-os": "*"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
