merch upsertion to repository seemingly got optimized (not quite tested yet though)

--- a/PriceTracker/PriceTracker.csproj
+++ b/PriceTracker/PriceTracker.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Models\ShopSpecific\Citilink\" />
     <Folder Include="Modules\Repository\Mapping\Process\" />
   </ItemGroup>
 
