--- a/PriceTracker/PriceTracker.csproj
+++ b/PriceTracker/PriceTracker.csproj
@@ -7,22 +7,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DisabledFiles\CitilinkMerchParser.cs" />
+    <Compile Remove="DisabledFiles\MerchCatalogUrlsExtractor.cs" />
+    <Compile Remove="Modules\MerchDataUpserter\ExtractiveUpsertion\Services\ShopSpecific\Citilink\Engine\CitilinkMerchParser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.19">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Playwright" Version="1.51.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Models\ShopSpecific\Citilink\" />
+    <Folder Include="Modules\MerchDataUpserter\Core\Models\" />
+    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Models\ShopSpecific\Citilink\Process\" />
+    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Services\ShopSpecific\Citilink\Engine_v2\MerchParser\MerchFetchResponse\" />
     <Folder Include="Modules\Repository\Mapping\Process\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="DisabledFiles\CitilinkMerchParser.cs" />
+    <None Include="DisabledFiles\MerchCatalogUrlsExtractor.cs" />
   </ItemGroup>
 
 </Project>
