A lot of configuration options can now be set from Properties/appsettings.json

--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -8,5 +8,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MerchUpsertionOptions": {
+
+    "CitilinkUpsertionOptions": {
+      // Период обновления цен в днях
+      "CitilinkPriceUpdatePeriod": 7,
+      // Минимальная и максимальная задержка браузера в секундах при парсинге 
+      "HeadlessBrowserMinDelay": 15,
+      "HeadlessBrowserMaxDelay": 30,
+
+      // Максимально допустимое число запросов в рамках заданного временного промежутка. Запросом считается либо
+      //полная загрузка html-документа со всеми его связями, либо действительно один запрос (как правило, весящий
+      //достаточно много)
+      "MaxPageRequestsPerTime": 300,
+      // Время указывается в часах.
+      "MinCooldownForPageRequests": 12,
+      "CitilinkMainCatalogUrl": "https://www.citilink.ru/catalog/",
+      "CitilinkUrl": "https://www.citilink.ru/",
+      "CitilinkAPIRoute": "https://www.citilink.ru/graphql/"
+    },
+    // Должен ли работать апсершн товаров, вместе с веб-интерфейсом и БД?
+    "UpsertionActive": true
+
+  }
+  
 }
