--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -29,8 +29,8 @@
       "CitilinkAPIRoute": "https://www.citilink.ru/graphql/"
     },
     // Должен ли работать апсершн товаров, вместе с веб-интерфейсом и БД?
-    "UpsertionActive": true
-
+    "UpsertionActive": true,
+    "UserAgent": "PriceTracker/0.1"
   }
   
 }
