--- a/PriceTracker/Properties/launchSettings.json
+++ b/PriceTracker/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "applicationUrl": "https://localhost:7170;http://localhost:5094",
       "launchUrl": "https://localhost:7170/swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Release"
       }
     },
     "IIS Express": {
