HttpClient cookies of citilink scraper can now be set in appsettings. Playwright removed

--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -26,7 +26,8 @@
       "MinCooldownForPageRequests": 12,
       "CitilinkMainCatalogUrl": "https://www.citilink.ru/catalog/",
       "CitilinkUrl": "https://www.citilink.ru/",
-      "CitilinkAPIRoute": "https://www.citilink.ru/graphql/"
+      "CitilinkAPIRoute": "https://www.citilink.ru/graphql/",
+      "CitilinkHttpClientCookie": "_city_guessed=1; _space=chlb_cl; _tuid=afe6c93ebb00a653fa10981930de680623afd184; ab_test_segment=56 "
     },
     // Должен ли работать апсершн товаров, вместе с веб-интерфейсом и БД?
     "UpsertionActive": true,
