--- a/PriceTracker/PriceTracker.csproj
+++ b/PriceTracker/PriceTracker.csproj
@@ -15,7 +15,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Playwright" Version="1.51.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
@@ -25,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Modules\MerchDataUpserter\Core\Models\" />
     <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Models\ShopSpecific\Citilink\Process\" />
+    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Utils\" />
     <Folder Include="Modules\Repository\Mapping\Process\" />
   </ItemGroup>
 
