--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -14,7 +14,8 @@
     "CitilinkUpsertionOptions": {
       // Период обновления цен в днях
       "CitilinkPriceUpdatePeriod": 7,
-      // Минимальная и максимальная задержка браузера в секундах при парсинге 
+      // Минимальная и максимальная задержка браузера в секундах при парсинге (НА ДАННЫЙ МОМЕНТ НЕ РАБОТАЕТ И НИ
+      // НА ЧТО НЕ ВЛИЯЕТ)
       "HeadlessBrowserMinDelay": 15,
       "HeadlessBrowserMaxDelay": 30,
 
@@ -27,10 +28,11 @@
       "CitilinkMainCatalogUrl": "https://www.citilink.ru/catalog/",
       "CitilinkUrl": "https://www.citilink.ru/",
       "CitilinkAPIRoute": "https://www.citilink.ru/graphql/",
+      "IgnoredCategorySlugs": [],
       "CitilinkHttpClientCookie": "_city_guessed=1; _space=chlb_cl; _tuid=afe6c93ebb00a653fa10981930de680623afd184; ab_test_segment=56 "
     },
     // Должен ли работать апсершн товаров, вместе с веб-интерфейсом и БД?
-    "UpsertionActive": true,
+    "UpsertionActive": false,
     "UserAgent": "PriceTracker/0.1"
   }
   
