--- a/PriceTracker/appsettings.json
+++ b/PriceTracker/appsettings.json
@@ -14,10 +14,6 @@
     "CitilinkUpsertionOptions": {
       // Период обновления цен в днях
       "CitilinkPriceUpdatePeriod": 7,
-      // Минимальная и максимальная задержка браузера в секундах при парсинге (НА ДАННЫЙ МОМЕНТ НЕ РАБОТАЕТ И НИ
-      // НА ЧТО НЕ ВЛИЯЕТ)
-      "HeadlessBrowserMinDelay": 15,
-      "HeadlessBrowserMaxDelay": 30,
 
       // Максимально допустимое число запросов в рамках заданного временного промежутка. Запросом считается либо
       //полная загрузка html-документа со всеми его связями, либо действительно один запрос (как правило, весящий
@@ -32,8 +28,8 @@
       "CitilinkHttpClientCookie": "_city_guessed=1; _space=chlb_cl; _tuid=afe6c93ebb00a653fa10981930de680623afd184; ab_test_segment=56 "
     },
     // Должен ли работать апсершн товаров, вместе с веб-интерфейсом и БД?
-    "UpsertionActive": false,
-    "UserAgent": "PriceTracker/0.1"
+    "UpsertionActive": true,
+    "UserAgent": "PriceTracker/0.1 (contact: pricetracker.feedback@gmail.com)"
   }
   
 }
