--- a/PriceTracker/PriceTracker.csproj
+++ b/PriceTracker/PriceTracker.csproj
@@ -8,6 +8,13 @@
   
   </PropertyGroup>
 
+	<!--
+  <ItemGroup>
+  <Content Include="wwwroot\**\*" CopyToPublishDirectory="PreserveNewest" />
+</ItemGroup>
+
+-->
+	
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.19" />
@@ -15,7 +22,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Playwright" Version="1.51.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
@@ -25,6 +31,7 @@
   <ItemGroup>
     <Folder Include="Modules\MerchDataUpserter\Core\Models\" />
     <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Models\ShopSpecific\Citilink\Process\" />
+    <Folder Include="Modules\MerchDataUpserter\ExtractiveUpsertion\Utils\" />
     <Folder Include="Modules\Repository\Mapping\Process\" />
   </ItemGroup>
 
